[gd_scene load_steps=4 format=3 uid="uid://cbwfpqrk2x08t"]

[ext_resource type="Script" uid="uid://cvc0fkoxhcld1" path="res://editor/editor_sidebar.gd" id="1_dsxm1"]
[ext_resource type="Texture2D" uid="uid://b6bhtsw8tx0y2" path="res://assets/textures/godoticon.svg" id="2_qcpyw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dsxm1"]
bg_color = Color(0, 0.08886719, 0.203125, 1)
border_width_left = 4
border_color = Color(1, 1, 1, 1)

[node name="Sidebar" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dsxm1")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="EditorArea" type="Control" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Panel" type="PanelContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dsxm1")

[node name="Label" type="Label" parent="HBoxContainer/Panel"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "FPS : "

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Panel/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="EditModes" type="ItemList" parent="HBoxContainer/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_behavior_recursive = 1
allow_search = false
auto_width = true
auto_height = true
item_count = 3
max_columns = 3
same_column_width = true
fixed_column_width = 96
icon_mode = 0
fixed_icon_size = Vector2i(64, 64)
item_0/text = "Camera"
item_0/icon = ExtResource("2_qcpyw")
item_1/text = "Tiles"
item_1/icon = ExtResource("2_qcpyw")
item_2/text = "Entities"
item_2/icon = ExtResource("2_qcpyw")

[connection signal="item_selected" from="HBoxContainer/Panel/MarginContainer/VBoxContainer/EditModes" to="." method="_on_item_list_item_selected"]
